--- a/admin/view/html/catalog/information_group_form.html
+++ b/admin/view/html/catalog/information_group_form.html
@@ -89,6 +89,27 @@
                                     <?php endif; ?>
                                 </div>
                             </div>
+                            
+                            <div class="form-group row">
+                                <label for="input-information-id" class="col-sm-2 col-form-label">
+                                    <?php echo $entry_page; ?></label>
+
+                                <div class="col-sm-10">
+                                    <select name="information_id" class="form-control" id="input-information-id">
+                                        <?php foreach($pages as $page) : ?>
+                                        <?php if($page['information_id'] == $information_id) : ?>
+                                        <option value="<?php echo $page['information_id']; ?>" selected="selected">
+                                            <?php echo $page['title']; ?>
+                                        </option>
+                                        <?php else : ?>
+                                        <option value="<?php echo $page['information_id']; ?>">
+                                            <?php echo $page['title']; ?>
+                                        </option>
+                                        <?php endif; ?>
+                                        <?php endforeach; ?>
+                                    </select>
+                                </div>
+                            </div>
 
                             <div class="form-group row">
                                 <label for="input-sort-order"
