--- a/admin/view/html/catalog/information_group_form.html
+++ b/admin/view/html/catalog/information_group_form.html
@@ -89,7 +89,7 @@
                                     <?php endif; ?>
                                 </div>
                             </div>
-                            
+
                             <div class="form-group row">
                                 <label for="input-information-id" class="col-sm-2 col-form-label">
                                     <?php echo $entry_page; ?></label>
@@ -108,6 +108,17 @@
                                         <?php endif; ?>
                                         <?php endforeach; ?>
                                     </select>
+                                </div>
+                            </div>
+                            
+                            <div class="form-group row required">
+                                <label for="input-keyword" class="col-sm-2 col-form-label">
+                                    <?php echo $entry_keyword; ?></label>
+
+                                <div class="col-sm-10">
+                                    <input type="text" name="information_seo_url" value="<?php echo $information_seo; ?>"
+                                           placeholder="<?php echo $entry_keyword; ?>" class="form-control"
+                                           id="input-keyword" />
                                 </div>
                             </div>
 
