--- a/admin/view/html/catalog/club_form.html
+++ b/admin/view/html/catalog/club_form.html
@@ -105,16 +105,16 @@
                             </div>
                             
                             <div class="form-group row required">
-                                <label for="input-secretory" class="col-sm-2 col-form-label">
-                                    <?php echo $entry_secretory; ?></label>
+                                <label for="input-secretary" class="col-sm-2 col-form-label">
+                                    <?php echo $entry_secretary; ?></label>
 
                                 <div class="col-sm-10">
-                                    <input type="text" name="secretory" value="<?php echo $secretory; ?>"
-                                           placeholder="<?php echo $entry_secretory; ?>" class="form-control"
+                                    <input type="text" name="secretary" value="<?php echo $secretary; ?>"
+                                           placeholder="<?php echo $entry_secretary; ?>" class="form-control"
                                            id="input-secretory" />
-                                    <?php if($secretory_err) : ?>
+                                    <?php if($secretary_err) : ?>
                                     <span class="help-block">
-                                        <?php echo $secretory_err; ?></span>
+                                        <?php echo $secretary_err; ?></span>
                                     <?php endif; ?>
                                 </div>
                             </div>
