--- a/template/view/html/club/dashboard.html
+++ b/template/view/html/club/dashboard.html
@@ -26,51 +26,57 @@
                             <div class="col-md-3 mt-20">
                                 <div class="club-login-details">
                                     <div class="page-title">Club Details</div>
-                                    <p class="seprate-p"><b>Rotary Club of Deonar</b></p>
-                                    <p class="combine-p"><span><i class="fa fa-clock-o"></i> 06/01/2018</span><span
-                                            class="pull-right"><i class="fa fa-trophy"></i> 5555555</span></p>
-                                    <p class="combine-p"><span><i class="fa fa-mobile"></i> <a href="tel:919820000672">
-                                                +91 98200
-                                                00672</a></span></p>
+                                    <p class="seprate-p"><b>Rotary Club of
+                                            <?php echo $club_name; ?></b></p>
+                                    <p class="combine-p"><span><i class="fa fa-calendar-o"></i>
+                                            <?php echo $date; ?></span><span class="pull-right"><i
+                                                class="fa fa-trophy"></i> 250</span></p>
+                                    <p class="combine-p"><span><i class="fa fa-mobile"></i> <a
+                                                href="tel:<?php echo $mobile; ?>">
+                                                <?php echo $mobile; ?></a></span></p>
                                     <p class="combine-p"><span><i class="fa fa-envelope-o"></i><a
-                                                href="mailto:rtnliladhar@gmail.com"> rtnliladhar@gmail.com</a></span>
+                                                href="mailto:<?php echo $email; ?>">
+                                                <?php echo $email; ?></a></span>
                                     </p>
                                     <hr class="featurette-divider">
-                                    <p class="seprate-p"><b>President</b> - Liladhar Parab</p>
-                                    <p class="seprate-p"><b>Ass. Governor</b> - Dr Shankar Chawla</p>
-                                    <p class="seprate-p"><b>Dist. Secretary</b> - Dr Shankar Chawla</p>
+                                    <p class="seprate-p"><b>President</b> - <?php echo $president; ?></p>
+                                    <p class="seprate-p"><b>Ass. Governor</b> - <?php echo $assistant_governor; ?></p>
+                                    <p class="seprate-p"><b>Dist. Secretary</b> - <?php echo $district_secretary; ?></p>
                                 </div>
                                 <div id="mobile-menu">
                                     <a href="javascript:;" class="bars"><i class="fa fa-bars mobile-bars"></i></a>
                                     <div class="mobile-drop">
                                         <ul id="page-menu">
-                                            <li><a href="<?php echo $base_url; ?>/club_dashboard.php"
-                                                    class="active-menu">Dashboard</a></li>
-                                            <li><a href="<?php echo $base_url; ?>/club_members.php">Members</a></li>
-                                            <li><a href="<?php echo $base_url; ?>/club_trf.php">TRF</a></li>
-                                            <li><a href="<?php echo $base_url; ?>/club_projects.php">Projects</a></li>
-                                            <li><a href="<?php echo $base_url; ?>/club_profile.php">Profile</a></li>
-                                            <li><a href="<?php echo $base_url; ?>/club_logout.php">Logout</a></li>
+                                            <li>
+                                                <a href="<?php echo $dashbaord; ?>"
+                                                    class="active-menu"><?php echo $text_dashboard; ?></a>
+                                            </li>
+                                            <li><a href="<?php echo $member; ?>"><?php echo $text_member; ?></a></li>
+                                            <li><a href="<?php echo $trf; ?>"><?php echo $text_trf; ?></a></li>
+                                            <li><a href="<?php echo $project; ?>"><?php echo $text_project; ?></a></li>
+                                            <li><a href="<?php echo $profile; ?>"><?php echo $text_profile; ?></a></li>
+                                            <li><a href="<?php echo $logout; ?>"><?php echo $text_logout; ?></a></li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class="desktop-drop">
                                     <ul id="page-menu">
-                                        <li><a href="<?php echo $base_url; ?>/club_dashboard.php"
-                                                class="active-menu">Dashboard</a>
+                                        <li>
+                                            <a href="<?php echo $dashbaord; ?>"
+                                                class="active-menu"><?php echo $text_dashboard; ?></a>
                                         </li>
-                                        <li><a href="<?php echo $base_url; ?>/club_members.php">Members</a></li>
-                                        <li><a href="<?php echo $base_url; ?>/club_trf.php">TRF</a></li>
-                                        <li><a href="<?php echo $base_url; ?>/club_projects.php">Projects</a></li>
-                                        <li><a href="<?php echo $base_url; ?>/club_profile.php">Profile</a></li>
-                                        <li><a href="<?php echo $base_url; ?>/club_logout.php">Logout</a></li>
+                                        <li><a href="<?php echo $member; ?>"><?php echo $text_member; ?></a></li>
+                                        <li><a href="<?php echo $trf; ?>"><?php echo $text_trf; ?></a></li>
+                                        <li><a href="<?php echo $project; ?>"><?php echo $text_project; ?></a></li>
+                                        <li><a href="<?php echo $profile; ?>"><?php echo $text_profile; ?></a></li>
+                                        <li><a href="<?php echo $logout; ?>"><?php echo $text_logout; ?></a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="col-md-9 mt-20">
                                 <div class="about-page-content">
                                     <div class="page-title">
-                                        Club Dashboard
+                                        <?php echo $heading_title; ?>
                                     </div>
                                     <div class="club-page-content">
                                         <div class="row dashboard-stats">
@@ -113,7 +119,7 @@
                                     </div>
                                     <div class="club-page-content">
                                         <div class="page-title">
-                                            Latest Members
+                                            <?php echo $text_latest_member; ?>
                                         </div>
                                         <div class="table-design-row">
                                             <table id="exampleclub" class="table table-bordered table-striped">
@@ -148,7 +154,7 @@
                                     </div>
                                     <div class="club-page-content">
                                         <div class="page-title">
-                                            Latest TRF Contribution
+                                            <?php echo $text_latest_trf; ?>
                                         </div>
                                         <div class="table-design-row">
                                             <table id="exampleclub2" class="table table-bordered table-striped">
@@ -178,7 +184,7 @@
                                     </div>
                                     <div class="club-page-content">
                                         <div class="page-title">
-                                            Latest Projects
+                                            <?php echo $text_latest_project; ?>
                                         </div>
                                         <div class="table-design-row">
                                             <table id="exampleclub3" class="table table-bordered table-striped">
